@startuml

title __PRESENTATION's Class Diagram__\n
!define DARKORANGE
!includeurl https://raw.githubusercontent.com/Drakemor/RedDress-PlantUML/master/style.puml

  namespace wasteless.server {
    namespace presentation {
      class wasteless.server.presentation.GroceryListController {
          + GroceryListController()
          + calculateWaste()
          + createGroceryList()
          + deleteGroceryList()
          + generateJsonReport()
          + generateTextReport()
          + getAllGroceryLists()
          + getGroceryListById()
          + updateGroceryList()
      }
      class wasteless.server.presentation.ItemController {
                + ItemController()
                + createItem()
                + deleteItem()
                + getAllItems()
                + getItemById()
                + updateItem()
      }
      class wasteless.server.presentation.UserController {
                + UserController()
                + createUser()
                + deleteUser()
                + getActiveUser()
                + getAllUsers()
                + getUSerById()
                + loginUser()
                + updateUser()
            }
    }
  }
  


  

  wasteless.server.presentation.GroceryListController o-- wasteless.server.business.ExportService : exportService
  wasteless.server.presentation.GroceryListController o-- wasteless.server.presentation.mapper.GroceryListMapper : groceryListMapper
  wasteless.server.presentation.GroceryListController o-- wasteless.server.business.GroceryListService : groceryListService
  wasteless.server.presentation.GroceryListController o-- wasteless.server.business.WasteManagerService : wasteManagerService
  wasteless.server.presentation.ItemController o-- wasteless.server.presentation.mapper.ItemMapper : itemMapper
  wasteless.server.presentation.ItemController o-- wasteless.server.business.ItemService : itemService
  wasteless.server.presentation.UserController o-- wasteless.server.presentation.mapper.UserMapper : userMapper
  wasteless.server.presentation.UserController o-- wasteless.server.business.UserService : userService


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
